--- a/index.html
+++ b/index.html
@@ -2,14 +2,28 @@
 <html>
     <head>
         <title>Shape Drawer</title>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <button id="square">Square</button>
-        <button id="circle">Circle</button>
-        <input type="range" min="1" max="100" value = "25" id="heightSlider">
-        <input type="range" min="1" max="100" value = "25" id="widthSlider">
+        <nav>
+            <h1>ShapeDrawer</h1>
+            <ul id="navItems">
+                <p>Select your shape</p>
+                <li><button id="square" class="navItem">Square</button></li>
+                <li><button id="circle"class="navItem">Circle</button></li>
+                <p>Height</p>
+                <li><input type="range" min="1" max="100" value = "25" id="heightSlider" class="navItem"></li>
+                <p>Width/Radius</p>
+                <li><input type="range" min="1" max="100" value = "25" id="widthSlider" class="navItem"></li>
+            </ul>
+            <a href="#" id ="navButton">
+            <i class="fas fa-bars"></i>
+            </a>
+        </nav>
         <canvas></canvas>
         <script src="canvas.js"></script>
+        <script defer src="https://use.fontawesome.com/releases/v5.8.2/js/all.js" integrity="sha384-DJ25uNYET2XCl5ZF++U8eNxPWqcKohUUBUpKGlNLMchM7q4Wjg2CUpjHLaL8yYPH" crossorigin="anonymous"></script>
     </body>
     </html>
