Updated styling and JS files. Updated minor HTML

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <h1>ShapeDrawer</h1>
             <ul id="navItems">
                 <p>Select your shape</p>
-                <li><button class="navItem">Square</button></li>
+                <li><button class="navItem active">Square</button></li>
                 <li><button class="navItem">Circle</button></li>
                 <label for="heightSlider">Height</label>
                 <li><input type="range" min="1" max="100" value = "25" id="heightSlider" class="navItem"></li>
