Updated Remove shape function to redraw background. Updated some functions to ES6. Changed app name.

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Shape Drawer</title>
+        <title>ShapeBuilder</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
@@ -10,7 +10,7 @@
     <body>
         <canvas></canvas>
         <nav>
-            <h1>ShapeDrawer</h1>
+            <h1>ShapeBuilder</h1>
             <ul id="navItems">
                 <p>Select your shape</p>
                 <li><button class="navItem active">Square</button></li>
