--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
                 <p>Select your shape</p>
                 <li><button class="navItem active">Square</button></li>
                 <li><button class="navItem">Circle</button></li>
+                <li><button class="navItem">Triangle</button></li>
                 <label for="heightSlider">Height</label>
                 <li><input type="range" min="1" max="100" value = "25" id="heightSlider" class="navItem"></li>
                 <label for="widthSlider">Width/Radius</label>
