Updated html spacing on the nav. Added slider events.

--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
                 <li><button class="navItem active">Square</button></li>
                 <li><button class="navItem">Circle</button></li>
                 <li><button class="navItem">Triangle</button></li>
-                <label for="heightSlider">Height</label>
+                <label for="heightSlider">Height:<span id="heightNum"> 25</span></label>
                 <li><input type="range" min="1" max="100" value = "25" id="heightSlider" class="navItem"></li>
-                <label for="widthSlider">Width/Radius</label>
+                <label for="widthSlider">Width/Radius:<span id="widthNum"> 25</span></label>
                 <li><input type="range" min="1" max="100" value = "25" id="widthSlider" class="navItem"></li>
             </ul>
             <a href="#" id ="navButton">
