--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <h1>ShapeBuilder</h1>
             <ul id="navItems">
                 <p>Select your shape</p>
-                <li><button class="navItem active">Square</button></li>
+                <li><button class="navItem active">Rectangle</button></li>
                 <li><button class="navItem">Circle</button></li>
                 <li><button class="navItem">Triangle</button></li>
                 <label for="heightSlider">Height:<span id="heightNum"> 25</span></label>
