Added a reset function and hover effects. JS refactoring

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
                 <li><input type="range" min="1" max="100" value = "25" id="heightSlider" class="navItem"></li>
                 <label for="widthSlider">Width/Radius:<span id="widthNum"> 25</span></label>
                 <li><input type="range" min="1" max="100" value = "25" id="widthSlider" class="navItem"></li>
+                <li><button id ="reset" class="navItem">Reset</button></li>
             </ul>
             <a href="#" id ="navButton">
             <i class="fas fa-bars"></i>
